--- a/src/assets/scss/common/reset.scss
+++ b/src/assets/scss/common/reset.scss
@@ -14,7 +14,7 @@
 html, body {
     height: 100%;
     border: 0;
-    font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
+    font-family: "Microsoft Yahei", "Helvetica-Neue", "Helvetica", Arial, sans-serif;
     line-height: 1.5;
     margin: 0;
     padding: 0;
