--- a/src/assets/scss/common/reset.scss
+++ b/src/assets/scss/common/reset.scss
@@ -18,6 +18,7 @@ html, body {
     line-height: 1.5;
     margin: 0;
     padding: 0;
+    color: #333;
 }
 
 div, span, object, iframe, img, table, caption, thead, tbody,
