complete detail page

--- a/src/assets/scss/common/reset.scss
+++ b/src/assets/scss/common/reset.scss
@@ -94,3 +94,19 @@ select {
     display: block;
   }
 }
+
+.mint-header {
+    background-color: #47a304;
+}
+
+ .mint-button--primary {
+    height: 40px;
+    width: 180px;
+    background-color: #fff;
+    border: 1px solid #47a304;
+    color: #47a304;
+}
+.mint-button--primary:active {
+    background-color: #47a304;
+    color: #fff!important;
+}
